    2. You may now submit a form by calling form.submit() rather than client.getResponse( form.getRequest() ). In this
       case you must set any parameters directly into the form.
    3. You may now obtain the current page from a web client by calling client.getCurrentPage() rather than
       client.getFrameContents( "_top" );

29-Jul-2002
Acknowledgements:
    Thanks to Sebastien Rosset for pointing out the case sensitivity problem with WebResponse.isHTML

Problems fixed:
    1. WebResponses are now recognized as HTML even if the content type is not lower case.

Acknowledgements:
    Thanks to Rajan Narasimhan for fixing the relative URL computation problem.

25-Jul-2002
Problems fixed:
    1. Relative URLs were not being computed properly when the base URL had a query string containing a slash.

24-Jul-2002
Additions:
    1. PseudoServer and associated classes are now publically available and in their own package, pseudoserver.
    2. Experimental JavaScript is starting to be added: support is present for the following DOM objects:
         Window  properties: self, window, document   methods: alert,  events: onLoad
         Document properties: title, forms, <form name>

15-Jul-2002
Problems fixed:
    1. The "_parent" frame target should now be handled correctly.

10-Jul-2002
Additions:
    1. WebResponse and WebCell now support a new method, getImages, which returns an array of objects representing the
       image tags found.

25-Jun-2002
Additions:
    1. The HttpUnitOption property 'acceptCookies' now controls whether cookies received from the server will be saved
       in a web client and sent on subsequent requests. The default is true.

23-Jun-2002
Acknowledgements:
    Thanks to Steve Heath for an example on how to make JSPs work with ServletUnit.

Additions:
    1. ServletUnit now supports ServletContext.getRealPath
    2. ServletUnit now supports JSPs using Jasper. By default, JSPs are expected to be in the current working directory.